add final words in the slide.

--- a/slides.html
+++ b/slides.html
@@ -1348,6 +1348,24 @@ A Lot of top journals are incorporating code-editor these days.
 <span id="cb8-10"><a href></a><span class="co"># remove all dangling images and caches (do it periodically to save space)</span></span>
 <span id="cb8-11"><a href></a><span class="fu">sudo</span> docker system prune</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 </div>
+</section>
+<section id="final-words-1-follow-the-gurus" class="slide level2">
+<h2>Final words 1: Follow the gurus</h2>
+<ul>
+<li><p><a href="http://www.jdingel.com/">Jonathan Dingel</a></p></li>
+<li><p><a href="https://grantmcdermott.com/">Grant R. McDermott</a></p></li>
+<li><p><a href="https://web.stanford.edu/~gentzkow/research/CodeAndData.pdf">Gentzkow and Shapiro</a></p></li>
+</ul>
+</section>
+<section id="final-words-2-become-an-active-googler" class="slide level2">
+<h2>Final words 2: Become an active googler</h2>
+<p>Places to resort to</p>
+<ul>
+<li><p>Stack Overflow</p></li>
+<li><p>Quora</p></li>
+<li><p>Reddit</p></li>
+<li><p>… and Many more!</p></li>
+</ul>
 
 
 </section></section>
